--- a/public/scss/partials/_page-search.scss
+++ b/public/scss/partials/_page-search.scss
@@ -61,10 +61,13 @@
 				border-radius: 3px;
 				display: block; width: 100%;
 			}
-			h3 {
+			h1 {
 				margin: 20px 0;
 				letter-spacing: 2px;
 				font-weight: $semiBold;
+				font-size: 21px;
+				margin-top:25px;
+				margin-bottom:25px;
 			}
 			p {
 				font-weight: $light;
