--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11005,36 +11005,40 @@ section.home-footer .row > div {
         bottom: 0; }
       .salon#content #carousel-salon .carousel-info h1, .salon#content #carousel-salon .carousel-info a {
         color: white; }
-    .salon#content #carousel-salon .request-review {
-      font-weight: 400;
-      font-size: 1.6em;
-      color: white;
-      margin-right: 5px;
-      text-decoration: underline; }
-      @media screen and (max-width: 1199px) {
-        .salon#content #carousel-salon .request-review {
-          float: left !important; } }
-  .salon#content #carousel-salon .carousel-inner .item {
-    height: 470px;
-    background: linear-gradient(transparent, rgba(0, 0, 0, 0.4)), url(../img/placeholder-salon.png) repeat-x;
-    background-size: cover;
-    background: none; }
-    @media screen and (max-width: 767px) {
-      .salon#content #carousel-salon .carousel-inner .item {
-        height: 320px; } }
-    .salon#content #carousel-salon .carousel-inner .item img, .salon#content #carousel-salon .carousel-inner .item a > img {
-      margin: auto; }
-    .salon#content #carousel-salon .carousel-inner .item.placeholder {
+      .salon#content #carousel-salon .carousel-info img {
+        z-index: 1;
+        position: absolute;
+        width: 14em;
+        bottom: -60px;
+        left: -120px;
+        border-style: solid;
+        border-width: 5px;
+        border-color: white;
+        border-radius: 100%; }
+        @media screen and (max-width: 1450px) {
+          .salon#content #carousel-salon .carousel-info img {
+            display: none; } }
+    .salon#content #carousel-salon .carousel-inner .item {
       height: 470px;
       background: linear-gradient(transparent, rgba(0, 0, 0, 0.4)), url(../img/placeholder-salon.png) repeat-x;
-      background-size: cover; }
-    .salon#content #carousel-salon .carousel-inner .item img {
-      background-repeat: no-repeat;
       background-size: cover;
-      background-position: 50% 50%;
-      background-color: #838B95;
-      width: 100%;
-      height: 100%; }
+      background: none; }
+      @media screen and (max-width: 767px) {
+        .salon#content #carousel-salon .carousel-inner .item {
+          height: 320px; } }
+      .salon#content #carousel-salon .carousel-inner .item img, .salon#content #carousel-salon .carousel-inner .item a > img {
+        margin: auto; }
+      .salon#content #carousel-salon .carousel-inner .item.placeholder {
+        height: 470px;
+        background: linear-gradient(transparent, rgba(0, 0, 0, 0.4)), url(../img/placeholder-salon.png) repeat-x;
+        background-size: cover; }
+      .salon#content #carousel-salon .carousel-inner .item img {
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: 50% 50%;
+        background-color: #838B95;
+        width: 100%;
+        height: 100%; }
   .salon#content .main-content {
     position: relative;
     background-color: white;
