--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -38,46 +38,49 @@
 			h1, a {
 				color: white;
 			}
-		}
-		.request-review {
-			font-weight: 400;
-			font-size: 1.6em;
-			color: white;
-			margin-right: 5px;
-			text-decoration: underline;
-
-			@media screen and (max-width: $screen-md-max)  {
-				float: left !important;
+			img {
+				@media screen and (max-width: 1450px) {
+					display: none;
+				}
+				z-index: 1;
+				position: absolute;
+				width: 14em;
+				bottom: -60px;
+				left: -120px;
+				border-style: solid;
+				border-width: 5px;
+				border-color: white;
+				border-radius: 100%;
 			}
 		}
-	}
-	#carousel-salon .carousel-inner .item {
-		height: 470px;
-		background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.4)), url(../img/placeholder-salon.png) repeat-x;
-		background-size: cover;
-		background: none;
-
-		@media screen and (max-width: $screen-xs-max) {
-			height: 320px;
-		}
-
-		img, a > img {
-	  		margin: auto;
-		}
-
-		&.placeholder {
+		.carousel-inner .item {
 			height: 470px;
 			background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.4)), url(../img/placeholder-salon.png) repeat-x;
 			background-size: cover;
-		}
+			background: none;
 
-		img {
-			background-repeat: no-repeat;
-		    background-size: cover;
-		    background-position: 50% 50%;
-		    background-color: #838B95;
-		    width: 100%;
-		    height: 100%;
+			@media screen and (max-width: $screen-xs-max) {
+				height: 320px;
+			}
+
+			img, a > img {
+		  		margin: auto;
+			}
+
+			&.placeholder {
+				height: 470px;
+				background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.4)), url(../img/placeholder-salon.png) repeat-x;
+				background-size: cover;
+			}
+
+			img {
+				background-repeat: no-repeat;
+			    background-size: cover;
+			    background-position: 50% 50%;
+			    background-color: #838B95;
+			    width: 100%;
+			    height: 100%;
+			}
 		}
 	}
 	.main-content {
