--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11026,6 +11026,7 @@ section.home-footer .row > div {
     .salon#content #carousel-salon .carousel-inner .item {
       height: 470px;
       background: linear-gradient(transparent, rgba(0, 0, 0, 0.4)), url(../img/placeholder-salon.png) repeat-x;
+      background-size: cover;
       background: none; }
       @media screen and (max-width: 767px) {
         .salon#content #carousel-salon .carousel-inner .item {
@@ -11037,6 +11038,7 @@ section.home-footer .row > div {
         background: linear-gradient(transparent, rgba(0, 0, 0, 0.4)), url(../img/placeholder-salon.png) repeat-x; }
       .salon#content #carousel-salon .carousel-inner .item img {
         background-repeat: no-repeat;
+        background-size: cover;
         background-position: 50% 50%;
         background-color: #838B95;
         width: 100%;
