--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -49,6 +49,9 @@
 			}
 			h1, a {
 				color: white;
+				@media screen and (max-width: $screen-xs-max) {
+					font-size: 2.1em;
+				}
 			}
 			img {
 				@media screen and (max-width: 1450px) {
