--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11010,10 +11010,12 @@ section.home-footer .row > div {
       right: 0;
       position: absolute;
       bottom: 0px; }
-      @media screen and (max-width: 767px) {
-        .salon#content #carousel-salon .carousel-info .star {
-          width: 10px;
-          margin: 1px; } }
+      .salon#content #carousel-salon .carousel-info .star {
+        margin: 2px; }
+        @media screen and (max-width: 767px) {
+          .salon#content #carousel-salon .carousel-info .star {
+            width: 10px;
+            margin: 1px; } }
       .salon#content #carousel-salon .carousel-info div:first-child {
         padding-left: 0; }
         @media screen and (max-width: 767px) {
@@ -11031,14 +11033,14 @@ section.home-footer .row > div {
       .salon#content #carousel-salon .carousel-info img {
         z-index: 1;
         position: absolute;
-        width: 14em;
+        width: 140px;
         bottom: -60px;
-        left: -120px;
+        left: -70px;
         border-style: solid;
         border-width: 5px;
         border-color: white;
         border-radius: 100%; }
-        @media screen and (max-width: 1450px) {
+        @media screen and (max-width: 1199px) {
           .salon#content #carousel-salon .carousel-info img {
             display: none; } }
     .salon#content #carousel-salon .carousel-inner .item {
@@ -11084,6 +11086,7 @@ section.home-footer .row > div {
       background: #f4f4f4;
       z-index: -1; }
     .salon#content .main-content section.salon-info {
+      margin-left: -15px;
       position: relative;
       width: 100%;
       padding-top: 16px; }
@@ -11101,14 +11104,11 @@ section.home-footer .row > div {
         @media screen and (max-width: 480px) {
           .salon#content .main-content section.salon-info div.timetable span.extra-small {
             width: 20%; } }
-      .salon#content .main-content section.salon-info .row {
-        padding-left: 35px; }
-        @media screen and (max-width: 767px) {
-          .salon#content .main-content section.salon-info .row {
-            padding-left: 15px; } }
+      @media screen and (max-width: 767px) {
+        .salon#content .main-content section.salon-info .row {
+          padding-left: 15px; } }
       .salon#content .main-content section.salon-info .row:first-child {
         width: auto;
-        padding-left: 35px;
         border-top-left-radius: 4px;
         border-top-right-radius: 4px; }
         @media screen and (max-width: 991px) {
